[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/enemy.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/BossBuddy.gd" type="Script" id=2]
[ext_resource path="res://assets/sfx/enemy_death.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 43, 35 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 44, 10 )

[sub_resource type="Animation" id=3]
resource_name = "Death"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("BossBuddySprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.01, 0.01 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Spawn"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 0.5, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 250, -250 ), Vector2( 500, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BossBuddySprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1440.0, 2880.0 ]
}

[node name="BossBuddy" type="KinematicBody2D" groups=[
"BossBuddy",
]]
modulate = Color( 0.901961, 0.388235, 0.137255, 1 )
scale = Vector2( 0.75, 0.75 )
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )

[node name="BossBuddySprite" type="Sprite" parent="."]
position = Vector2( 0, -48 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -36.4704 )
shape = SubResource( 1 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
position = Vector2( 0, -16.5 )
scale = Vector2( 1, 1.55 )
rect = Rect2( -50, -50, 100, 60 )
process_parent = true
physics_process_parent = true

[node name="StompDetector" type="Area2D" parent="."]
visible = false
modulate = Color( 0.0352941, 0.262745, 0.952941, 1 )
position = Vector2( 0, -71 )
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StompDetector"]
position = Vector2( 0, -10 )
shape = SubResource( 2 )

[node name="EnemyDeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "Effects"

[node name="Animation" type="AnimationPlayer" parent="."]
anims/Death = SubResource( 3 )
anims/Spawn = SubResource( 4 )
[connection signal="body_entered" from="StompDetector" to="." method="_on_StompDetector_body_entered"]
[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
